<resources>
    <string name="app_name">Movie Application</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>

    <string name="collection_upcoming">Upcoming Movies</string>
    <string name="collection_popular">Popular Movies</string>
    <string name="collection_favorite">Favorite Movies</string>
    <string name="collection_top_rated">Top Rated Movies</string>
    <string name="collection_now_playing">Now Playing</string>

    <string name="movie_overview">Overview</string>
    <string name="movie_popularity">Popularity</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_budget">Budget</string>
    <string name="movie_revenue">Revenue</string>

    <string name="more">More</string>
    <string name="menu_favorite">Favorite</string>

    <string name="favorite_added">Movie added at Favorite list</string>
    <string name="favorite_deleted">Movie deleted at Favorite list</string>
</resources>
