<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_movie_details"
        tools:context=".movie_details.MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movie_poster"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="220dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shape_gradient_poster"
                app:layout_constraintBottom_toBottomOf="@id/movie_poster"/>


        <com.google.android.material.card.MaterialCardView
                android:id="@+id/movie_img_card"
                app:layout_constraintBottom_toBottomOf="@id/movie_poster"
                app:layout_constraintStart_toStartOf="@id/movie_poster"
                android:layout_margin="16dp"
                android:layout_width="80dp"
                android:layout_height="120dp">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movie_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_title"
                tools:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@id/movie_img_card"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@id/movie_img_card"
                app:layout_constraintEnd_toStartOf="@id/movie_head_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_head_rating"
                tools:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@id/movie_title"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@id/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintTop_toTopOf="@id/movie_head_rating"
                app:layout_constraintBottom_toBottomOf="@id/movie_head_rating"
                app:layout_constraintStart_toStartOf="@id/movie_head_rating"
                android:src="@drawable/ic_star_black_24dp"
                android:tint="@color/colorStar"
                android:layout_width="22dp"
                android:layout_height="22dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_description_label"
                android:layout_width="0dp"
                android:text="@string/movie_overview"
                android:padding="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_description"
                android:layout_width="0dp"
                tools:text="@string/app_name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/movie_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_date_label"
                app:layout_constraintTop_toBottomOf="@id/movie_description"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/movie_release_date"
                app:layout_constraintEnd_toStartOf="@id/movie_date_line"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_date"
                app:layout_constraintTop_toBottomOf="@id/movie_date_label"
                android:layout_width="0dp"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="@string/movie_release_date"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@id/movie_date_line"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/movie_date_line"
                android:layout_width="1px"
                app:layout_constraintTop_toTopOf="@id/movie_date_label"
                app:layout_constraintStart_toEndOf="@id/movie_date_label"
                app:layout_constraintEnd_toStartOf="@id/movie_rating_label"
                app:layout_constraintBottom_toBottomOf="@id/movie_date"
                android:background="@color/colorPrimary"
                android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_rating_label"
                app:layout_constraintTop_toBottomOf="@id/movie_description"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/movie_rating"
                app:layout_constraintEnd_toStartOf="@id/movie_popularity_line"
                app:layout_constraintStart_toEndOf="@id/movie_date_line"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_rating"
                app:layout_constraintTop_toBottomOf="@id/movie_rating_label"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                tools:text="@string/movie_rating"
                app:layout_constraintEnd_toStartOf="@id/movie_popularity_line"
                app:layout_constraintStart_toEndOf="@id/movie_date_line"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/movie_popularity_line"
                android:layout_width="1px"
                app:layout_constraintTop_toTopOf="@id/movie_date_label"
                app:layout_constraintStart_toEndOf="@id/movie_rating_label"
                app:layout_constraintEnd_toStartOf="@id/movie_popularity_label"
                app:layout_constraintBottom_toBottomOf="@id/movie_date"
                android:background="@color/colorPrimary"
                android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_popularity_label"
                app:layout_constraintTop_toBottomOf="@id/movie_description"
                android:text="@string/movie_popularity"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/movie_popularity_line"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_popularity"
                app:layout_constraintTop_toBottomOf="@id/movie_popularity_label"
                tools:text="@string/movie_popularity"
                android:layout_width="0dp"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/movie_popularity_line"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/movie_details_line"
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_date"
                android:background="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_budget_label"
                app:layout_constraintTop_toBottomOf="@id/movie_details_line"
                android:text="@string/movie_budget"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@id/movie_budget_line"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_budget"
                app:layout_constraintTop_toBottomOf="@id/movie_budget_label"
                tools:text="@string/movie_budget"
                android:layout_width="0dp"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@id/movie_budget_label"
                app:layout_constraintStart_toStartOf="@id/movie_budget_label"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/movie_budget_line"
                android:layout_width="1px"
                app:layout_constraintTop_toTopOf="@id/movie_budget_label"
                app:layout_constraintStart_toEndOf="@id/movie_budget_label"
                app:layout_constraintEnd_toStartOf="@id/movie_revenue_label"
                app:layout_constraintBottom_toBottomOf="@id/movie_budget"
                android:background="@color/colorPrimary"
                android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_revenue_label"
                app:layout_constraintTop_toBottomOf="@id/movie_details_line"
                android:text="@string/movie_revenue"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@id/movie_budget_line"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_revenue"
                app:layout_constraintTop_toBottomOf="@id/movie_revenue_label"
                tools:text="@string/movie_revenue"
                android:layout_width="0dp"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@id/movie_revenue_label"
                app:layout_constraintStart_toStartOf="@id/movie_revenue_label"
                android:layout_height="wrap_content"/>

        <View
                app:layout_constraintTop_toBottomOf="@id/movie_revenue"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>